--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1 class="header">Заголовок 1</h1>
     <h1 class="header header--red">Заголовок 2</h1>
+    <div class="footer">footer</div>
   </body>
 </html>
